--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,8 +20,11 @@ android {
 }
 
 dependencies {
-    def room_version = "2.2.3"
-    def lifecycle_version = "2.1.0"
+    def room_version = "2.2.4"
+    def lifecycle_version = "2.2.0"
+
+    implementation "io.reactivex.rxjava3:rxjava:3.0.1"
+    implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
 
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     annotationProcessor "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
